<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"

    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/busImageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/bus"
        android:layout_centerHorizontal="true" /><!-- Center horizontally -->

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to Campus travel M-Connect"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>
    <RadioGroup
        android:id="@+id/radioGrouploginmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:textStyle="bold">

        <RadioButton
            android:id="@+id/radioButtonDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8sp"
            android:text="Driver"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonstudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8sp"
            android:text="Student"
            android:textStyle="bold" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGrouploginmode"
        android:hint="Enter Username"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_border"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Password"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_border"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button_bg"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>