<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="driver_activity_root" type="id" />
    <item name="admin_activity_root" type="id" />
</resources>